third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/v1-examples/multi_pool_money_market_token.exp
module 0x2::Token {
    struct Coin<AssetType: copy + drop> has store {
        type: AssetType,
        value: u64,
    }
    public fun split<ATy: copy + drop>(coin: Coin<ATy>, amount: u64): (Coin<ATy>, Coin<ATy>) {
        let _t7 = coin;
        (_t7, withdraw<ATy>(&mut coin, amount))
    }
    public fun withdraw<ATy: copy + drop>(coin: &mut Coin<ATy>, amount: u64): Coin<ATy> {
        let _t6 = *&coin.value >= amount;
        if (!_t6) abort 10;
        let _t11 = *&coin.value - amount;
        *&mut coin.value = _t11;
        Coin<ATy>{type: *&coin.type,value: amount}
    }
}

--- unable to recompile the decompiled code:
exiting with stackless-bytecode checks failed
error: local `coin` of type `Coin<ATy>` does not have the `copy` ability
  ┌─ multi_pool_money_market_token.move:7:19
  │
7 │         let _t7 = coin;
  │                   ^^^^ copy needed here because value is still in use
8 │         (_t7, withdraw<ATy>(&mut coin, amount))
  │                             --------- used here

error: local `coin` of type `Coin<ATy>` does not have the `drop` ability
  ┌─ multi_pool_money_market_token.move:8:29
  │
8 │         (_t7, withdraw<ATy>(&mut coin, amount))
  │                             ^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used
